--- a/stroom/roles/stack/download/defaults/main.yml
+++ b/stroom/roles/stack/download/defaults/main.yml
@@ -2,7 +2,7 @@
 
 # Temporary location where the archive files are downloaded to.
 # They will not be deleted to save downloding again.
-downloads_dir: "/tmp/downloads"
+downloads_dir: "/tmp/stroom_downloads"
 
 # The path where the stack will be extracted to
 stack_install_root_dir: "~"
