--- a/stroom/roles/stack/remove_certs/tasks/delete_certs.yml
+++ b/stroom/roles/stack/remove_certs/tasks/delete_certs.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: "Deleting server certs for serivce {{ _service_dev_certs.service }}"
+- name: "Deleting certs for serivce {{ _service_dev_certs.service }}"
   file:
     path: "{{ stack_volumes_dir }}/{{ _service_dev_certs.service }}/certs/{{ _cert_file_name }}"
     state: absent
