--- a/stroom/roles/stack/remove_certs/tasks/main.yml
+++ b/stroom/roles/stack/remove_certs/tasks/main.yml
@@ -9,7 +9,7 @@
   # is not in the stack. Could make it aware of which services are present
 - name: "Deleting certs for {{ nginx_certs }}"
   include_tasks: delete_certs.yml
-  loop: "{{ service_dev_cert_names }}"
+  loop: "{{ service_dev_certs }}"
   loop_control:
     loop_var: _service_dev_certs
     label: "{{ _service_dev_certs.service }}"
