Flesh out install_mixed_cluster.yml and its dependencies

--- a/stroom/install_mixed_cluster.yml
+++ b/stroom/install_mixed_cluster.yml
@@ -1,34 +1,169 @@
 ---
+########### LOCALHOST  ###########
 
 - hosts:
     - localhost
   gather_facts: false
-  tags:
-    - local_config
-  vars_files:
-    - variables.yml
+  vars:
   tasks:
 
-    - import_role:
-        name: non_docker_stroom/download
+    - name: 'Check mandatory variables are defined'
+      assert:
+        that:
+          - local_config_dir is defined
 
-    - import_role:
-        name: non_docker_stroom/unpack_config
+    - debug:
+        msg:
+          - "local_config_dir: {{ local_config_dir }}"
+      tags:
+        - all
 
-    #- import_role:
-        #name: non_docker_proxy/download
-
-    #- import_role:
-        #name: non_docker_proxy/unpack_config
-
-
-- name: YUM update and reeboot
-  import_playbook: ./yum_update.yml
-  tags:
-    - never
-    - yum_update
+################### SETUP HOSTS ###################
 
 - name: Setup stroom hosts
   import_playbook: ./setup_stroom_hosts.yml
   tags:
     - setup
+
+########### 'stroom_services_stack' HOSTS  ###########
+
+  # TODO move out into its own playbook
+- hosts:
+    - stroom_services_stack
+  gather_facts: true # Needed for yum stuff
+  become: yes
+  become_user: "{{ stroom_user }}"
+  vars:
+    stack_bin_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{ stack_version }}"
+    stack_config_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/{{ stack_name }}-{{ stack_version }}/config"
+    stack_volumes_dir: "{{ stack_install_root_dir }}/{{ stack_name }}/volumes"
+    stack_env_var_file: "{{ stack_config_dir }}/{{ stack_name }}.env"
+    config_files_and_templates_dir: "{{ local_config_dir }}/files_and_templates/volumes"
+  tasks:
+
+    - name: 'Check mandatory variables are defined'
+      assert:
+        that:
+          - local_config_dir is defined
+          - stack_env_vars is defined
+          - stack_install_root_dir is defined
+          - stack_name is defined
+          - stack_version is defined
+          - stroom_user is defined
+
+    - debug:
+        msg:
+          - "Deploying/configuring stroom-proxy in {{ stack_bin_dir }} as user {{ stroom_user }}"
+      tags:
+        - deploy
+        - configure
+
+
+    ########### DEPLOY VANILLA REMOTE PROXY STACK  ###########
+
+    - import_role:
+        name: stack/download
+      tags:
+        - deploy
+
+    ########### UPDATE REMOTE STACK CONFIG  ###########
+
+      # Remove the development certificates
+    - import_role:
+        name: stack/remove_certs
+      tags:
+        - remove_dev_certs
+        - deploy
+        - configure
+
+    - import_role:
+        name: stack/update_config
+      tags:
+        - deploy
+        - configure
+
+
+
+  # TODO move out into its own playbook, or one for each of stroom and proxy
+- hosts:
+    - stroom_and_proxy
+  gather_facts: true # Needed for yum stuff
+  become: yes
+  become_user: "{{ stroom_user }}"
+  vars:
+    stroom_bin_dir: "{{ stroom_install_root_dir }}/stroom/{{ stroom_version }}"
+    stroom_config_dir: "{{ stroom_bin_dir }}/config"
+    stroom_proxy_bin_dir: "{{ stroom_proxy_install_root_dir }}/stroom-proxy/{{ stroom_proxy_version }}"
+    stroom_proxy_config_dir: "{{ stroom_proxy_bin_dir }}/config"
+    stroom_config_files_and_templates_dir: "{{ local_config_dir }}/files_and_templates/stroom"
+    stroom_proxy_config_files_and_templates_dir: "{{ local_config_dir }}/files_and_templates/stroom-proxy"
+    stroom_conf_file: "{{ stroom_config_dir }}/stroom.conf"
+  tasks:
+
+    - name: 'Check mandatory variables are defined'
+      assert:
+        that:
+          - local_config_dir is defined
+          - stroom_install_root_dir is defined
+          - stroom_version is defined
+          - stroom_user is defined
+
+    - import_role:
+        name: non_docker_stroom/download
+      tags:
+        - deploy
+
+    - import_role:
+        name: non_docker_proxy/download
+      tags:
+        - deploy
+
+    - import_role:
+        name: non_docker_stroom/update_config
+      tags:
+        - deploy
+        - configure
+
+    #- import_role:
+        #name: non_docker_proxy/update_config
+      #tags:
+        #- deploy
+        #- configure
+
+
+
+
+
+
+#- hosts:
+    #- localhost
+  #gather_facts: false
+  #tags:
+    #- local_config
+  #vars_files:
+    #- variables.yml
+  #tasks:
+
+    #- import_role:
+        #name: non_docker_stroom/download
+
+    #- import_role:
+        #name: non_docker_stroom/unpack_config
+
+    ##- import_role:
+        ##name: non_docker_proxy/download
+
+    ##- import_role:
+        ##name: non_docker_proxy/unpack_config
+
+
+#- name: YUM update and reeboot
+  #import_playbook: ./yum_update.yml
+  #tags:
+    #- never
+    #- yum_update
+
+#- name: Setup stroom hosts
+  #import_playbook: ./setup_stroom_hosts.yml
+  #tags:
+    #- setup
