--- a/stroom/roles/non_docker_stroom/download/defaults/main.yml
+++ b/stroom/roles/non_docker_stroom/download/defaults/main.yml
@@ -3,3 +3,6 @@
 # Temporary location where the archive files are downloaded to.
 # They will not be deleted to save downloding again.
 downloads_dir: "/tmp/stroom_downloads"
+
+stroom_archive_filename: "stroom-app-{{ stroom_version }}.zip"
+stroom_url: "https://github.com/gchq/stroom/releases/download/{{ stroom_version }}/{{ stroom_archive_filename }}"
