--- a/stroom/roles/non_docker_stroom/download/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/download/tasks/main.yml
@@ -15,59 +15,50 @@
       - "stroom_url: {{ stroom_url }}"
     verbosity: 2
 
-- name: "Ensure directory {{ downloads_dir }} exists"
+- name: "See if {{ stroom_bin_dir }} exists"
+  stat:
+    path: "{{ stroom_bin_dir }}"
+  register: _stroom_bin_dir_info
+
+- name: "Download archive {{ _stroom_stack_archive_url }}" 
+  when: _stroom_bin_dir_info.stat.exists == false
+  block:
+
+    - name: Ensure directory {{ downloads_dir }} exists
+      file:
+        path: "{{ downloads_dir }}"
+        state: directory
+
+    - name: Download stroom distribution {{ stroom_url }}
+      get_url:
+        url: "{{ stroom_url }}"
+        dest: "{{ downloads_dir }}/{{ stroom_archive_filename }}"
+        checksum: "sha256:{{ stroom_url }}.sha256"
+
+    - name: Ensure install directory {{ stroom_bin_dir }} exists
+      file:
+        path: "{{ stroom_bin_dir }}"
+        state: directory
+
+    - name: Unpack Stroom's distribution zip
+      unarchive:
+        src: "{{ downloads_dir }}/{{ stroom_archive_filename }}"
+        dest:  "{{ stroom_bin_dir }}"
+        remote_src: yes
+
+    - name: Ensure logs directory exists
+      file:
+        path:  "{{ stroom_bin_dir }}/logs"
+        state: directory
+
+######## END OF BLOCK ######## 
+
+
+- name: Create a symlink for 'latest'
   file:
-    path: "{{ downloads_dir }}"
-    state: directory
-
-- name: "Download stroom distribution {{ stroom_url }}"
-  get_url:
-    url: "{{ stroom_url }}"
-    dest: "{{ downloads_dir }}/{{ stroom_archive_filename }}"
-    # Commented out until 6.0.19 is released, due to bug in the hash file
-    checksum: "sha256:{{ stroom_url }}.sha256"
+    state: link
+    force: yes
+    src: "{{ stroom_version }}"
+    dest: "{{ stroom_install_root_dir }}/stroom/latest"
 
 
-
-
-
-
-
-
-
-
-#- name: Ensure directory exists
-  #file:
-  #path: "{{ stroom_install_root_dir }}/{{ stroom_version }}"
-  #state: directory
-
-#- name: Download stroom distribution
-  #get_url:
-    #url: "{{ stroom_url }}"
-    #dest: "{{ stroom_install_root_dir }}/{{ stroom_archive_filename }}"
-    ## Commented out until 6.0.19 is released, due to bug in the hash file
-    ## checksum: "sha256:{{ stroom_url }}.sha256"
-  #register: download_info
-
-  ## FIXME: I can't get the unarchive module to work on macOS or Ubuntu. Ansible complains about /bin/tar not being able
-  ## to handle the archive. It untars manually without problems, so I'l just do that.
-##- name: Unpack Stroom's distribution tar
-  ## command: "tar -xvf {{ playbook_dir }}/{{ download_info.dest }} --directory {{ local_config_dir }}"
-
-#- name: Unpack Stroom's distribution zip
-  #unarchive:
-    #src: "{{ download_info.dest }}"
-    #dest:  "{{ stroom_install_root_dir }}/{{ stroom_version }}"
-    #remote_src: yes
-
-#- name: Ensure logs directory exists
-  #file:
-    #path:  "{{ stroom_install_root_dir }}/{{ stroom_version }}/logs"
-    #state: directory
-  
-#- name: Create a symlink for 'latest'
-  #file:
-    #state: link
-    #force: yes
-    #src: "{{ stroom_version }}"
-    #dest: "{{ download_path }}/latest"
