--- a/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
@@ -2,25 +2,114 @@
 #
 # Stroom config
 
-# Needed for calling python, TODO use script module
-- name: Get absolute path 
-  command: "realpath {{ local_config_dir }}"
-  register: absolute_path
+- name: Ensure directory {{ stroom_temp_dir }} exists
+  file:
+    path: "{{ stroom_temp_dir }}"
+    state: directory
+  tags:
+    - deploy
+    - configure
 
-# TODO rewrite with lineinfile, replace et al.
-- name: Update the local stroom.conf file from the inventory
-  command: "python3 ./scripts/update_stroom_conf_file.py {{ absolute_path.stdout }}/stroom"
+# NOTE: It is debatable if we configure the file like this or use a jinja template file
+# If we use templates then we need to maintain the template in this repo.
+# For real deployments where a clone/fork of this repo is used, jinja templates
+# would probably make more sense, and be a load faster.
 
-- name: Enable content pack import
-  lineinfile:
-    path: "{{ stroom_conf_file }}"
-    regexp: '^\s*#?\s*(stroom\.contentPackImportEnabled)=false\s*$'
-    line: '\1=true'
-    backrefs: yes
+  # Set all the env vars in the stack env file
+- import_role:
+    name: non_docker_stroom/set_stroom_conf_values
+  tags:
+    - deploy
+    - configure
 
-- name: Un-comment internal stat entries to disable stroom-stats internal stats
+  # Some instances of IP_ADDRESS are not nginx_advertised_host, so they must be explicitly set
+  # in set_stroom_conf_values above
+- name: Replace any instances of IP_ADDRESS in {{ stroom_conf_file }} with {{ nginx_advertised_host }}
   replace:
     path: "{{ stroom_conf_file }}"
-    regexp: '^\s*#\s*(stroom\.internalstatistics\..*)$'
-    replace: '\1'
+    regexp: 'IP_ADDRESS'
+    replace: "{{ nginx_advertised_host }}"
+
+- debug:
+    msg:
+      - "stroom_config_files_and_templates_dir: {{ stroom_config_files_and_templates_dir }}"
+    verbosity: 2
+  tags:
+    - deploy
+    - configure
+
+- name: "Check if {{ stroom_config_files_and_templates_dir }} exists on the Ansible controller"
+  local_action: stat path={{ stroom_config_files_and_templates_dir }}
+  become: false
+  register: _stroom_config_files_and_templates_dir_info
+  tags:
+    - deploy
+    - configure
+
+  # Copies any files (except *.j2 files) as they are to the remote.
+  # Mirrors the directory structure.
+  # Will only add/update files on the remote, not delete.
+  # To make deletion happen we would need to have all of the files
+  # locally.
+- name: Copy static files from {{ stroom_config_files_and_templates_dir }}/config
+        to {{ stroom_config_dir }}/
+  copy:
+    src: "{{ item.src }}/"
+    dest: "{{ stroom_config_dir }}/{{ item.path }}"
+    mode: "u=rw,g=,o="
+  with_filetree: "{{ stroom_config_files_and_templates_dir }}/config"
+  loop_control:
+    label: "{{ item.path }}"
+  when: stroom__config_files_and_templates_dir_info.stat.exists 
+        and item.state == 'file' 
+        and item.path is not match ".*\.j2$"
+  tags:
+    - deploy
+    - configure
+
+  # Copies and templates any *.j2 files found in the tree, removing the .j2 extension.
+  # Mirrors the directory structure.
+  # Will only add/update files on the remote, not delete.
+- name: Copy and template .j2 files from {{ stroom_config_files_and_templates_dir }}/config
+        to {{ stroom_config_dir }}/
+  template:
+    src: "{{ item.src }}/"
+    dest: "{{ stroom_config_dir }}/{{ item.path | regex_replace('.j2$','') }}"
+    mode: "u=rw,g=,o="
+  with_filetree: "{{ stroom_config_files_and_templates_dir }}/config/"
+  loop_control:
+    label: "{{ item.path }}"
+  when: _stroom_config_files_and_templates_dir_info.stat.exists 
+        and item.state == 'file' 
+        and item.path is match ".*\.j2$"
+  tags:
+    - deploy
+    - configure
+
+
+
+
+
+
+# Needed for calling python, TODO use script module
+#- name: Get absolute path 
+  #command: "realpath {{ local_config_dir }}"
+  #register: absolute_path
+
+## TODO rewrite with lineinfile, replace et al.
+#- name: Update the local stroom.conf file from the inventory
+  #command: "python3 ./scripts/update_stroom_conf_file.py {{ absolute_path.stdout }}/stroom"
+
+#- name: Enable content pack import
+  #lineinfile:
+    #path: "{{ stroom_conf_file }}"
+    #regexp: '^\s*#?\s*(stroom\.contentPackImportEnabled)=false\s*$'
+    #line: '\1=true'
+    #backrefs: yes
+
+#- name: Un-comment internal stat entries to disable stroom-stats internal stats
+  #replace:
+    #path: "{{ stroom_conf_file }}"
+    #regexp: '^\s*#\s*(stroom\.internalstatistics\..*)$'
+    #replace: '\1'
 
