--- a/stroom/roles/non_docker_stroom/update_config/vars/main.yml
+++ b/stroom/roles/non_docker_stroom/update_config/vars/main.yml
@@ -1,2 +1,2 @@
-stroom_conf_file: "{{ local_config_dir }}/stroom/{{ stroom_version }}/config/stroom.conf"
+stroom_conf_file: "{{ stroom_install_root_dir }}/stroom/{{ stroom_version }}/config/stroom.conf"
 
